<?xml version="1.0" encoding="UTF-8"?>
<!--+
    |
    | <meta:header>
    |   <meta:licence>
    |     Copyright (C) 2024 University of Manchester.
    |
    |     This information is free software: you can redistribute it and/or modify
    |     it under the terms of the GNU General Public License as published by
    |     the Free Software Foundation, either version 3 of the License, or
    |     (at your option) any later version.
    |
    |     This information is distributed in the hope that it will be useful,
    |     but WITHOUT ANY WARRANTY; without even the implied warranty of
    |     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    |     GNU General Public License for more details.
    |
    |     You should have received a copy of the GNU General Public License
    |     along with this program.  If not, see <http://www.gnu.org/licenses/>.
    |   </meta:licence>
    | </meta:header>
    |
    +-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>net.ivoa.calycopis</groupId>
	<artifactId>calycopis-webapp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Calycopis webapp</name>
	<description>IVOA ExecutionBroker implementation</description>
	<properties>
		<java.version>21</java.version>
        <lombok.version>1.18.34</lombok.version>
	</properties>
	<dependencies>
        <!--+
            | Include our generated classes.
            +-->
        <dependency>
            <groupId>net.ivoa.calycopis</groupId>
            <artifactId>calycopis-openapi</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <!--+
            | GitHub UUID generator.
            +-->
        <dependency>
          <groupId>com.github.f4b6a3</groupId>
          <artifactId>uuid-creator</artifactId>
          <version>6.0.0</version>
        </dependency>
        <!--+
            | Embedded H2 database.
            | https://www.baeldung.com/spring-boot-h2-database
            +-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!--+
            | ThreeTen time classes.
            | https://github.com/ThreeTen/threeten-extra
            +-->
        <dependency>
          <groupId>org.threeten</groupId>
          <artifactId>threeten-extra</artifactId>
          <version>1.8.0</version>
        </dependency>
        <!--+
            | Add slf4j and log4j logging.
            | https://www.baeldung.com/java-logging-intro
            +-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <!--version>2.0.16</version-->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <!--version>2.23.1</version-->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <!--version>2.23.1</version-->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <!--version>2.23.1</version-->
        </dependency>
        <!--+
            | Exclude default logging from SpringBoot.
            | https://stackoverflow.com/a/61873064
            +-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>
        <!--+
            | Project Lombok
            | https://projectlombok.org/
            +-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <!--version>${lombok.version}</version-->
            <scope>provided</scope>
        </dependency>

        <!--+
            | Dependencies from the Spring documentation.
            | https://www.baeldung.com/java-openapi-generator-server#spring
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>3.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.6</version>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.8.0</version>
        </dependency>
            +-->
        <!--+
            | Dependencies from build errors.
            | https://mkyong.com/spring-boot/package-javax-validation-constraints-does-not-exist/
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>8.0.1.Final</version>
        </dependency>
            +-->
        <!--+
            |
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
            +-->
        <!--+
            | https://mkyong.com/spring-boot/package-javax-validation-constraints-does-not-exist/
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>6.0.10.Final</version>
        </dependency>
            +-->
        <!--+
            | Java Servlet
            | https://stackoverflow.com/a/76034931
            +-->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.12.0</version>
        </dependency>

    	<dependency>
        	<groupId>wtf.metio.storage-units</groupId>
        	<artifactId>storage-units-model</artifactId>
        	<version>2023.12.20</version>
    	</dependency>

        <!--+
            | Dependencies from Ambleck.
            +-->
        <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
        <!--+
            | Added springdoc-openapi to generate OpenAPI spec.
            | https://stackoverflow.com/questions/55938207/how-to-generate-openapi-3-0-spec-from-existing-spring-boot-app
            | https://www.baeldung.com/spring-rest-openapi-documentation
            +-->
        <!--dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.5.0</version>
        </dependency-->
	</dependencies>

	<build>
        <!--sourceDirectory>src/main/java, target/generated-sources/openapi/src/main/java</sourceDirectory-->
		<plugins>
            <!--+
                | OpenAPI generator from the Spring documentation.
                | https://www.baeldung.com/java-openapi-generator-server#plugin
                +-->
            <!--plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>7.6.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>
                                ${schema.yaml}
                            </inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.baeldung.openapi.api</apiPackage>
                            <modelPackage>com.baeldung.openapi.model</modelPackage>
                            <supportingFilesToGenerate>
                                ApiUtil.java
                            </supportingFilesToGenerate>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                            </configOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin-->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
